--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ psycopg2==2.9.1
 psycopg2-binary==2.9.1
 fastapi-login==1.6.3
 passlib==1.7.4
+pyjwt==2.1.0
 bcrypt==3.2.0 
 uuid==1.30
 databases==0.4.3
